# basic-grpc-service-python

./: .gitignore  404.html  buf.gen.yaml  buf.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  server.py  sitemap.xml  utils.py
development/: index.html
docs/: development.md  examples.md  getting-started.md  index.md  testing.md
examples/: index.html
getting-started/: index.html
proto/basic/service/v1/: service.proto
proto/basic/v1/: basic.proto
proto/cloudevents/v1/: cloudevents.proto
reference/: index.html
reference/server/: index.html
reference/services.basic_service/: index.html
reference/utils.eliza/: index.html
reference/utils.some/: index.html
scripts/: deploy_pages.sh  gen_ref_pages.py  run_tests.sh  setup_docs.sh
sdk/basic/service/v1/: __init__.py  service_pb2.py  service_pb2.pyi
sdk/basic/v1/: __init__.py  basic_pb2.py  basic_pb2.pyi  basic_pb2_connect.py  basic_pb2_grpc.py
sdk/basic_grpc_service_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/cloudevents/v1/: __init__.py  cloudevents_pb2.py  cloudevents_pb2.pyi
search/: search_index.json
services/: __init__.py  basic_service.py
testing/: index.html
tests/: __init__.py  conftest.py  test_basic_service.py  test_eliza.py
utils/: __init__.py  eliza.py  some.py
